--- a/Opengl1/opengl1.vcxproj
+++ b/Opengl1/opengl1.vcxproj
@@ -90,15 +90,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Header Files\EngineMath.h" />
+    <ClInclude Include="Header Files\GlmMath.h" />
     <ClInclude Include="Header Files\Mesh.h" />
     <ClInclude Include="Header Files\Shader.h" />
     <ClInclude Include="Header Files\Window.h" />
+    <ClInclude Include="Header Files\Texture.h" />
+    <ClInclude Include="Header Files\Quaternion.h" />
+    <ClInclude Include="Header Files\Transform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source Files\Math\Quaternion.cpp" />
     <ClCompile Include="Source Files\Mesh.cpp" />
     <ClCompile Include="Source Files\Shader.cpp" />
     <ClCompile Include="Source Files\Source.cpp" />
     <ClCompile Include="Source Files\Window.cpp" />
+    <ClCompile Include="Source Files\Texture.cpp" />
+    <ClCompile Include="Source Files\Math\Transform.cpp" />
+    <ClCompile Include="vendor\stb_image.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
