added basic camera

--- a/Opengl1/imgui.ini
+++ b/Opengl1/imgui.ini
@@ -14,7 +14,8 @@ Size=346,180
 Collapsed=0
 
 [Window][Demo Window]
-Pos=286,111
+ViewportPos=1607,338
+ViewportId=0x6C08A485
 Size=208,251
 Collapsed=0
 
