--- a/Opengl1/opengl1.vcxproj.filters
+++ b/Opengl1/opengl1.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="Header Files\EngineMath.h" />
     <ClInclude Include="Header Files\GlmMath.h" />
     <ClInclude Include="Header Files\Transform.h" />
+    <ClInclude Include="Header Files\Engine.h" />
+    <ClInclude Include="Header Files\Editor\EditorUI.h" />
+    <ClInclude Include="Header Files\Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Mesh.cpp">
@@ -41,5 +44,7 @@
     <ClCompile Include="Source Files\Texture.cpp" />
     <ClCompile Include="Source Files\Math\Quaternion.cpp" />
     <ClCompile Include="Source Files\Math\Transform.cpp" />
+    <ClCompile Include="Source Files\Editor\EditorUI.cpp" />
+    <ClCompile Include="Source Files\Camera.cpp" />
   </ItemGroup>
 </Project>
