forgot to add some new files, >_<' my bad

--- a/Opengl1/opengl1.vcxproj.filters
+++ b/Opengl1/opengl1.vcxproj.filters
@@ -55,6 +55,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\EngineMathConstants.h" />
+    <ClInclude Include="Header Files\temp.h" />
+    <ClInclude Include="Material.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Camera.cpp">
@@ -89,5 +91,7 @@
     </ClCompile>
     <ClCompile Include="Source Files\stb_image.cpp" />
     <ClCompile Include="Source Files\EngineMathConstants.cpp" />
+    <ClCompile Include="Source Files\temp.cpp" />
+    <ClCompile Include="Material.cpp" />
   </ItemGroup>
 </Project>
