fixed camera bug introduced in the previous camera fix. it was always working fine but dumb me screwed it up in the name of fixing it. wasted 1 hr just to copy paste the original code (ಥ _ʖಥ).

--- a/Opengl1/opengl1.vcxproj.filters
+++ b/Opengl1/opengl1.vcxproj.filters
@@ -39,7 +39,13 @@
     <ClInclude Include="Header Files\Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Header Files\Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Header Files\Mesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Header Files\MeshInstance.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Header Files\Quaternion.h">
@@ -60,7 +66,6 @@
     <ClInclude Include="Header Files\temp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Header Files\MeshInstance.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\Camera.cpp">
@@ -75,6 +80,9 @@
     <ClCompile Include="Source Files\Input.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source Files\Material.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Source Files\Math\Quaternion.cpp">
       <Filter>Source Files\Math</Filter>
     </ClCompile>
@@ -82,6 +90,9 @@
       <Filter>Source Files\Math</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\MeshInstance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source Files\Shader.cpp">
@@ -102,6 +113,5 @@
     <ClCompile Include="Source Files\temp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\MeshInstance.cpp" />
   </ItemGroup>
 </Project>
