--- a/ECS/ECS.vcxproj
+++ b/ECS/ECS.vcxproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
     <PlatformToolset>v142</PlatformToolset>
@@ -100,6 +100,7 @@
     <ClInclude Include="HeaderFiles\ECSTYPES.h" />
     <ClInclude Include="HeaderFiles\System.h" />
     <ClInclude Include="HeaderFiles\SystemManager.h" />
+    <ClInclude Include="SourceFiles\ECSTYPES.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SourceFiles\Source.cpp" />
